@@ -6387,6 +6387,8 @@ genAnd (iCode * ic, iCode * ifx)
 	    {
 	      if (ifx)
 		jmpTrueOrFalse (ifx, tlbl);
+              else
+	        emitcode ("", "!tlabeldef", tlbl->key + 100);
 	      goto release;
 	    }
 	}
@@ -6477,6 +6479,8 @@ genAnd (iCode * ic, iCode * ifx)
 	    }
 	  else if (ifx)
 	    jmpTrueOrFalse (ifx, tlbl);
+          else
+	    emitcode ("", "!tlabeldef", tlbl->key + 100);
 	}
       else
 	{
@@ -6795,6 +6799,8 @@ genOr (iCode * ic, iCode * ifx)
 	    }
 	  else if (ifx)
 	    jmpTrueOrFalse (ifx, tlbl);
+          else
+	    emitcode ("", "!tlabeldef", tlbl->key + 100);
 	}
       else
 	{
